# Projeto-1

./: CMakeLists.txt  platformio.ini
include/: lv_conf.h
include/TFT_eSPI/: User_Setup.h
src/: Esp_Display.cpp  Esp_Estufa.cpp  Espl_Estufa.cpp  LGFX_config.h  Medições.txt  my_display_driver_init.cpp  my_display_driver_init.h  sender.cpp
src/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Ar_Screen.c  ui_Ar_Screen.h  ui_Brilho_Screen.c  ui_Brilho_Screen.h  ui_Def_Screen.c  ui_Def_Screen.h  ui_Home_Screen.c  ui_Home_Screen.h  ui_Humidade_Def_Screen.c  ui_Humidade_Def_Screen.h  ui_Humidade_Solo_Screen.c  ui_Humidade_Solo_Screen.h  ui_Luminosidade_Def.c  ui_Luminosidade_Def.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Sistema_Screen.c  ui_Sistema_Screen.h  ui_Solo_Def_Screen.c  ui_Solo_Def_Screen.h  ui_Solo_Screen.c  ui_Solo_Screen.h  ui_Solo_Screen1.c  ui_Solo_Screen1.h  ui_Temp_Def_Screen.c  ui_Temp_Def_Screen.h  ui_img_1515518950.c  ui_img_1936584166.c  ui_img_562263176.c  ui_img_drop_png.c  ui_img_gemini_generated_image_fo8hn8fo8hn8fo8h_129x160_png.c
