SET(SOURCES ui_Home_Screen.c
    ui_Def_Screen.c
    ui_Solo_Screen.c
    ui_Ar_Screen.c
    ui_Solo_Def_Screen.c
    ui_Temp_Def_Screen.c
    ui_Luminosidade_Def.c
    ui_Sistema_Screen.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_gemini_generated_image_fo8hn8fo8hn8fo8h_129x160_png.c
    ui_img_drop_png.c)

add_library(ui ${SOURCES})
