SET(SOURCES ui_Home_Screen.c
    ui_Def_Screen.c
    ui_Solo_Screen.c
    ui_Ar_Screen.c
    ui_Humidade_Def_Screen.c
    ui_Temp_Def_Screen.c
    ui_Brilho_Screen.c
    ui_Sistema_Screen.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_gemini_generated_image_fo8hn8fo8hn8fo8h_129x160_png.c
    ui_img_drop_png.c
    ui_img_1515518950.c
    ui_img_1936584166.c
    ui_img_562263176.c)

add_library(ui ${SOURCES})
